plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.5'
    id 'io.spring.dependency-management' version '1.1.0'
    //id 'org.graalvm.buildtools.native' version '0.9.18'
    id 'com.google.cloud.tools.jib' version '3.3.1'
}

group = 'cn.edu.zut'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


ext {
    set('snippetsDir', file("build/generated-snippets"))
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'application'
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        implementation 'org.springframework.boot:spring-boot-starter-json'
        implementation 'org.springframework.boot:spring-boot-starter-webflux'
        implementation 'org.springframework.boot:spring-boot-configuration-processor'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
        implementation 'org.springframework.boot:spring-boot-starter-logging'
        implementation 'org.springframework.boot:spring-boot-starter-integration'
        implementation 'org.springframework.integration:spring-integration-redis'
        implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
        implementation 'org.springframework.boot:spring-boot-starter-test'
        implementation 'org.springframework.amqp:spring-rabbit-test:3.0.3'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
        implementation 'org.bouncycastle:bcprov-jdk15to18:1.72'
        implementation 'cn.hutool:hutool-all:5.8.15'
        implementation 'org.mockito:mockito-core:5.2.0'
        implementation 'com.google.errorprone:error_prone_annotations:2.18.0'
        implementation 'org.projectlombok:lombok:1.18.26'
        //implementation 'com.redis.om:redis-om-spring:0.8.0'
        implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
        compileOnly 'org.projectlombok:lombok'
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'io.projectreactor:reactor-test'
        testImplementation 'org.springframework.integration:spring-integration-test'
    }
    tasks.named('test') {
        outputs.dir snippetsDir
        useJUnitPlatform()
    }
}

/*

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
*/
